tests/src/frontend/typechecking/invalid/early_return2.sk
class Test{x: Int = return 0}
